--- a/resource-lender/package.json
+++ b/resource-lender/package.json
@@ -7,5 +7,8 @@
   "scripts": {
     "dev:api": "pnpm --filter ./apps/api dev",
     "dev:web": "pnpm --filter ./apps/web dev"
+  },
+  "dependencies": {
+    "pnpm": "^10.21.0"
   }
 }
