--- a/resource-lender/apps/api/package.json
+++ b/resource-lender/apps/api/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "resource-lender-api",
-  "version": "0.0.1",
-  "private": true,
+  "name": "api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "start": "node dist/server.js",
-    "build": "tsc -p tsconfig.json"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "packageManager": "pnpm@10.21.0",
   "dependencies": {
-    "express": "^4.18.2",
+    "@prisma/client": "^6.19.0",
     "cors": "^2.8.5",
-    "prisma": "^5.0.0",
-    "@prisma/client": "^5.0.0"
+    "express": "^5.1.0",
+    "prisma": "^6.19.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "nodemon": "^3.1.11"
   }
 }
