--- a/resource-lender/apps/api/package.json
+++ b/resource-lender/apps/api/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
+    "start": "node ./src/server.js",
+    "dev": "nodemon --watch src --exec node ./src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
